# recruitment

./: README.md  pyproject.toml
data-analysis/: demand-forecast.ipynb
data-engineering/: data-cleaning-@-handling-missing-data.ipynb  data-cleaning-@-inconsistent-data.ipynb  data-cleaning-@-parsing-dates.ipynb  data-cleaning-@-scale-and-normalize.ipynb
developer/: concurrent-tree.ipynb  counting-problem.ipynb  cutting-scheduler.ipynb  fodder-volume.ipynb  validation-framework.ipynb
devops/: TASK.md
system-design/: README.md
system-design/cases/: customer-integration.md  run-dbt-models.md  serve-key-metrics.md
