[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "Poetry env for this project"
authors = ["Team Völur <team@volur.no>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
numpy = "^1.19.5"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
statsmodels = "^0.12.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.5"
jupyter-server-proxy = "^1.5.3"
ipykernel = "^5.4.3"
pytest = "^6.2.2"
ipytest = "^0.9.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.1"
mlxtend = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
